# RectangleBinPack

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
GuillotineBinPackTest/: BinPack.cpp
ShelfBinPackTest/: BinPack.cpp
SkylineBinPackTest/: BinPack.cpp
